# maturin-dependeny-rename-mre

./: .gitignore  Cargo.toml
adder_backend/: Cargo.toml
py-adder/: Cargo.toml
py-adder/src/: lib.rs
some_other_crate/: Cargo.toml
some_other_crate/src/: lib.rs
